--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6140,14 +6140,14 @@ height: 48px;
         // }
 
         // --marker
-        // [class*="marker"] {
-          // position: absolute;
-          // bottom: 100%;
-          // left: 0;
-          // width: max-content;
-          // height: max-content;
-          // pointer-events: none;
-        // }
+        [class*="marker"] {
+          position: absolute;
+          bottom: 25%;
+          right: 41%;
+          width: 43px;
+          height: 23px;
+          pointer-events: none;
+        }
 
 
         [class*="copyrights-pane"],
