--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3870,7 +3870,7 @@ a {
         }
 
         &_phone {
-          opacity: 0;
+          // opacity: 0;
         }
 
         .contacts__text {
@@ -4045,7 +4045,7 @@ a {
 
             font-weight: 500;
             color: white;
-            opacity: 0;
+            // opacity: 0;
 
             @media (max-width: 1100px) {
               align-self: start;
@@ -5188,7 +5188,7 @@ a {
       }
 
       .regions__list {
-        max-width: 100%;
+        max-width: 1920px;
         margin: 0 auto;
 
         .regions__item {
