--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4285,6 +4285,246 @@ a {
       }
     }
 
+    .choice {
+      padding: 100px 0 100px;
+
+      @media (max-width: 1750px) {
+        // max-width: 1712px;
+        padding: 0 20px;
+      }
+
+      @media (max-width: 660px) {
+        // max-width: 1712px;
+        padding: 0 15px;
+      }
+
+      .choice__container {
+        max-width: 1712px;
+        padding: 50px;
+        display: grid;
+        grid-auto-flow: row;
+        gap: 55px;
+        border: 1px solid #f5f5f5;
+
+        @media (max-width: 1750px) {
+          max-width: 1712px;
+          // padding: 50px;
+        }
+
+        @media (max-width: 1512px) {
+          max-width: 1280px;
+          padding: 50px;
+        }
+
+        @media (max-width: 960px) {
+          padding: 30px 40px;
+        }
+
+        @media (max-width: 660px) {
+          padding: 30px 20px;
+        }
+
+        .choice__form {
+          display: grid;
+          grid-template-columns: 1fr 1fr 1fr;
+          grid-template-rows: 1fr 1fr;
+          gap: 15px 30px;
+          align-items: center;
+
+          @media (max-width: 1512px) {
+            gap: 28px 30px;
+          }
+
+          @media (max-width: 1000px) {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: auto auto auto auto;
+            // grid-template-columns: repeat(auto-fill minmax(50%, 1fr));
+            grid-auto-flow: row;
+            gap: 30px 20px;
+          }
+
+          @media (max-width: 720px) {
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(5, auto);
+            // grid-template-columns: repeat(auto-fill minmax(50%, 1fr));
+            grid-auto-flow: column;
+            gap: 30px 0;
+          }
+
+          .choice__input-block {
+            display: grid;
+            grid-auto-flow: row;
+            gap: 10px;
+
+            @media (max-width: 720px) {
+              // max-width: 100%;
+              // width: 100%;
+            }
+
+            .choice__label {
+              font-family: Inter;
+              font-size: 14px;
+              font-weight: 400;
+              line-height: 16.94px;
+              text-align: left;
+              color: #000000;
+            }
+
+            .choice__select {
+            }
+
+            .choice__buttons-select {
+              padding: 0 2%;
+              display: grid;
+              grid-template-columns: 24% 18% 18% 18% 18%;
+              justify-content: center;
+              gap: 0px;
+
+              @media (max-width: 1512px) {
+                grid-template-columns: 35% 16% 16% 16% 16%;
+              }
+
+              .choice__buttons-select-item {
+                width: 100%;
+                height: 100%;
+                font-family: Inter;
+                font-size: 18px;
+                font-weight: 400;
+                color: rgba(#000, 0.5);
+                border-bottom: 2px solid transparent;
+                transition: color 0.3s ease-in-out,
+                  border-color 0.3s ease-in-out;
+
+                &_active {
+                  color: #000;
+                  border-color: #56693e;
+                  // border-bottom: 2px solid red;
+                }
+              }
+            }
+
+            .choice__square-select {
+              padding: 0px 5%;
+              display: grid;
+              grid-template-columns: 48% 0% 48%;
+              justify-content: center;
+              gap: 3%;
+
+              @media (max-width: 1000px) {
+                padding: 0px 20px;
+              }
+
+              .select__wrapper {
+                display: grid;
+                // grid-template-columns: 1fr 1fr;
+                grid-auto-flow: column;
+                justify-content: space-between;
+                gap: 10px;
+              }
+
+              .select__placeholder {
+                font-family: Inter;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 19.36px;
+                color: rgba(#616161, 0.5);
+              }
+              .select__input {
+                font-family: Inter;
+                font-size: 18px;
+                font-weight: 400;
+                line-height: 21.78px;
+                text-align: right;
+
+                @media (max-width: 1000px) {
+                  width: 30px;
+                }
+              }
+              .s-input-interval__range {
+                margin-bottom: -1px;
+                margin-top: -1px;
+                padding: 0 1.6rem;
+              }
+            }
+          }
+
+          .choice__btns-block {
+            grid-column: 2 span;
+            display: grid;
+            grid-auto-flow: column;
+            justify-content: start;
+            gap: 10px;
+
+            @media (max-width: 1750px) {
+              display: flex;
+              flex-flow: row wrap;
+              justify-content: flex-start;
+              align-items: center;
+              gap: 10px 15px;
+            }
+
+            @media (max-width: 1512px) {
+              // gap: 10px;
+            }
+
+            @media (max-width: 1000px) {
+              padding-top: 20px;
+            }
+
+            // grid-template-columns: repeat(6, auto);
+            .choice__btn-filter {
+              padding: 10px 20px;
+              display: grid;
+              grid-auto-flow: column;
+              justify-content: start;
+              align-items: center;
+              gap: 5px;
+              background: #e7f0db;
+              border-radius: 50px;
+              font-size: 16px;
+              font-weight: 500;
+              color: #56693e;
+              white-space: nowrap;
+
+              &_active {
+                background: #748d55;
+                color: white;
+              }
+            }
+          }
+
+          .choice__btn-wrap {
+            display: grid;
+            grid-auto-flow: column;
+            justify-content: space-between;
+            align-items: center;
+
+            .choice__text {
+              font-family: Inter;
+              font-size: 16px;
+              font-weight: 400;
+              line-height: 19.36px;
+              text-align: left;
+              color: #000;
+              opacity: 0.8px;
+            }
+
+            .choice__btn-request {
+              justify-self: end;
+  
+              @media (max-width: 1000px) {
+                grid-column: 2 span;
+                justify-self: center;
+                margin-top: 30px;
+                width: 100%;
+              }
+            }
+          }
+
+        }
+      }
+    }
+
     .about {
       grid-row: 3 / 4;
 
@@ -4535,225 +4775,7 @@ a {
       }
     }
 
-    .choice {
-      grid-row: 5 / 6;
 
-      @media (max-width: 1750px) {
-        // max-width: 1712px;
-        padding: 0 20px;
-      }
-
-      @media (max-width: 660px) {
-        // max-width: 1712px;
-        padding: 0 15px;
-      }
-
-      .choice__container {
-        max-width: 1712px;
-        padding: 50px;
-        display: grid;
-        grid-auto-flow: row;
-        gap: 50px;
-        border: 1px solid #f5f5f5;
-
-        @media (max-width: 1750px) {
-          max-width: 1712px;
-          // padding: 50px;
-        }
-
-        @media (max-width: 1512px) {
-          max-width: 1280px;
-          padding: 50px;
-        }
-
-        @media (max-width: 960px) {
-          padding: 30px 40px;
-        }
-
-        @media (max-width: 660px) {
-          padding: 30px 20px;
-        }
-
-        .choice__form {
-          display: grid;
-          grid-template-columns: 1fr 1fr 1fr;
-          grid-template-rows: 1fr 1fr;
-          gap: 15px 30px;
-          align-items: center;
-
-          @media (max-width: 1512px) {
-            gap: 28px 30px;
-          }
-
-          @media (max-width: 1000px) {
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: auto auto auto auto;
-            // grid-template-columns: repeat(auto-fill minmax(50%, 1fr));
-            grid-auto-flow: row;
-            gap: 30px 20px;
-          }
-
-          @media (max-width: 720px) {
-            grid-template-columns: 1fr;
-            grid-template-rows: repeat(5, auto);
-            // grid-template-columns: repeat(auto-fill minmax(50%, 1fr));
-            grid-auto-flow: column;
-            gap: 30px 0;
-          }
-
-          .choice__input-block {
-            display: grid;
-            grid-auto-flow: row;
-            gap: 10px;
-
-            @media (max-width: 720px) {
-              // max-width: 100%;
-              // width: 100%;
-            }
-
-            .choice__label {
-              font-family: Inter;
-              font-size: 14px;
-              font-weight: 400;
-              line-height: 16.94px;
-              text-align: left;
-              color: #000000;
-            }
-
-            .choice__select {
-            }
-
-            .choice__buttons-select {
-              padding: 0 2%;
-              display: grid;
-              grid-template-columns: 24% 18% 18% 18% 18%;
-              justify-content: center;
-              gap: 0px;
-
-              @media (max-width: 1512px) {
-                grid-template-columns: 35% 16% 16% 16% 16%;
-              }
-
-              .choice__buttons-select-item {
-                width: 100%;
-                height: 100%;
-                font-family: Inter;
-                font-size: 18px;
-                font-weight: 400;
-                color: rgba(#000, 0.5);
-                border-bottom: 2px solid transparent;
-                transition: color 0.3s ease-in-out,
-                  border-color 0.3s ease-in-out;
-
-                &_active {
-                  color: #000;
-                  border-color: #56693e;
-                  // border-bottom: 2px solid red;
-                }
-              }
-            }
-
-            .choice__square-select {
-              padding: 0px 5%;
-              display: grid;
-              grid-template-columns: 48% 0% 48%;
-              justify-content: center;
-              gap: 3%;
-
-              @media (max-width: 1000px) {
-                padding: 0px 20px;
-              }
-
-              .select__wrapper {
-                display: grid;
-                // grid-template-columns: 1fr 1fr;
-                grid-auto-flow: column;
-                justify-content: space-between;
-                gap: 10px;
-              }
-
-              .select__placeholder {
-                font-family: Inter;
-                font-size: 16px;
-                font-weight: 400;
-                line-height: 19.36px;
-                color: rgba(#616161, 0.5);
-              }
-              .select__input {
-                font-family: Inter;
-                font-size: 18px;
-                font-weight: 400;
-                line-height: 21.78px;
-                text-align: right;
-
-                @media (max-width: 1000px) {
-                  width: 30px;
-                }
-              }
-              .s-input-interval__range {
-                margin-bottom: -1px;
-                margin-top: -1px;
-                padding: 0 1.6rem;
-              }
-            }
-          }
-
-          .choice__btns-block {
-            grid-column: 2 span;
-            display: grid;
-            grid-auto-flow: column;
-            justify-content: start;
-            gap: 10px;
-
-            @media (max-width: 1750px) {
-              display: flex;
-              flex-flow: row wrap;
-              justify-content: flex-start;
-              align-items: center;
-              gap: 10px 15px;
-            }
-
-            @media (max-width: 1512px) {
-              // gap: 10px;
-            }
-
-            @media (max-width: 1000px) {
-              padding-top: 20px;
-            }
-
-            // grid-template-columns: repeat(6, auto);
-            .choice__btn-filter {
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              padding: 10px 20px;
-              background: #e7f0db;
-              border-radius: 50px;
-              font-size: 16px;
-              font-weight: 500;
-              color: #56693e;
-              white-space: nowrap;
-
-              &_active {
-                background: #748d55;
-                color: white;
-              }
-            }
-          }
-
-          .choice__btn-request {
-            justify-self: end;
-
-            @media (max-width: 1000px) {
-              grid-column: 2 span;
-              justify-self: center;
-              margin-top: 30px;
-              width: 100%;
-            }
-          }
-        }
-      }
-    }
   }
 
   .regions {
